Bug 172337 Attachment mechanism incompatible with Unicode Impact only Windows.  file URL will be UTF-8 when we put the MOZ_UNICODE flang (MOZ_UNICODE flag is module by module bases for now  until other modules are ready. NSPR/XPCOM) /r=nhotta; /sr=bienvenu