mailnews/compose/src/nsMsgCompose.cpp
@@ -3560,11 +3560,16 @@ nsresult nsMsgCompose::AttachmentPrettyName(const char* url, PRUnichar** _retval
     char * leafName = fileSpec.GetLeafName();
     if (leafName && *leafName)
     {
+#ifdef MOZ_UNICODE
+        /* file URL is now in UTF-8 */
+        *_retval = ToNewUnicode(NS_ConvertUTF8toUCS2(leafName));
+#else
         nsAutoString tempStr;
         nsresult rv = ConvertToUnicode(nsMsgI18NFileSystemCharset(), leafName, tempStr);
         if (NS_FAILED(rv))
           tempStr.AssignWithConversion(leafName);
       *_retval = ToNewUnicode(tempStr);
+#endif /* MOZ_UNICODE */
       nsCRT::free(leafName);
       return NS_OK;
     }
